fix (#88): Fixed multiple openapi scheme issues in phoenix endpoints
